# ggcat-vizitig

./: Cargo.toml  README.md  ggcat_to_bcalm2.py  pyproject.toml
.github/workflows/: CI.yml
crates/api/example/src/: main.rs
example-inputs/: fof.txt
python/vizitig_ggcat/: __init__.py
src/: lib.rs
