[package]
name = "ggcat-vizitig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ggcat_vizitig"
crate-type = ["cdylib"]

[dependencies]
ggcat-api = { git = "https://github.com/algbio/ggcat", version = "0.1.0" }
itertools = "0.11.0"
pyo3 = "0.19.0"
